compiler/testData/diagnostics/tests/delegation/Delegation_DifferentGenerics_Substitution.diag.txt
/test.kt:33:35: error: type mismatch: inferred type is JC but JI<Int> was expected
class C1(client: JC) : JI<Int> by client
                                  ^^^^^^

